/*
 * test_records_datatypes.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.test.scalarTypes;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestDataTypesProto";

import "record_metadata_options.proto";

message TypesRecord {
  optional int64 long_value = 1 [(field).primary_key = true];
  optional string str_value = 2;
  optional int32 int_value = 3;
  optional bool bool_value = 4;
  repeated string str_list_value = 5;
}

message RecordTypeUnion {
  optional TypesRecord _TypesRecord = 1;
}
